Fix status being the wrong width

--- a/css/styles.css
+++ b/css/styles.css
@@ -130,7 +130,7 @@ header a span.link:active {
     width: 20%;
 }
 
-.read {
+.status {
     text-align: end;
     width: 10%;
 }
